Project documentation stuff
 * Updated README.md to reflect project details instead of the default angular
   project details
 * Added a TODO.md file to track what needs to be done
 * Updated link name in navbar

--- a/src/app/components/navbar/navbar.component.html
+++ b/src/app/components/navbar/navbar.component.html
@@ -1,8 +1,8 @@
 <div class="navbar pure-menu pure-menu-horizontal">
     <span class="pure-menu-heading"><strong><a href="#" class="pure-menu-link">Dev Helper</a></strong></span>
     <ul class="pure-menu-list">
-        <li class="pure-menu-item"><a href="#" class="pure-menu-link">Read Later</a></li>
         <li class="pure-menu-item"><a href="#" class="pure-menu-link">References</a></li>
         <li class="pure-menu-item"><a href="#" class="pure-menu-link">Task Bucket</a></li>
+        <li class="pure-menu-item"><a href="#" class="pure-menu-link">Utility functions</a></li>
     </ul>
 </div>
