--- a/src/app/components/navbar/navbar.component.html
+++ b/src/app/components/navbar/navbar.component.html
@@ -1,8 +1,8 @@
 <div class="navbar pure-menu pure-menu-horizontal">
-    <span class="pure-menu-heading"><strong><a href="#" class="pure-menu-link">Dev Helper</a></strong></span>
+    <span class="pure-menu-heading"><strong><a routerLink="/" class="pure-menu-link">Dev Helper</a></strong></span>
     <ul class="pure-menu-list">
-        <li class="pure-menu-item"><a href="#" class="pure-menu-link">References</a></li>
-        <li class="pure-menu-item"><a href="#" class="pure-menu-link">Task Bucket</a></li>
-        <li class="pure-menu-item"><a href="#" class="pure-menu-link">Utility functions</a></li>
+        <li class="pure-menu-item"><a routerLink="/references" class="pure-menu-link">References</a></li>
+        <li class="pure-menu-item"><a routerLink="/tasks" class="pure-menu-link">Task Bucket</a></li>
+        <li class="pure-menu-item"><a routerLink="/utilities" class="pure-menu-link">Utility functions</a></li>
     </ul>
 </div>
