--- a/src/app/components/taskbucket/taskbucket.component.html
+++ b/src/app/components/taskbucket/taskbucket.component.html
@@ -1,1 +1,23 @@
-<p>Taskbucket Component</p>
+<div>
+    <header><h1>Add New Task</h1></header>
+    <form class="pure-form pure-form-stacked">
+        <fieldset>
+            <label for="description">Task Description</label>
+            <input id="description" type="text" class="pure-input-1" placeholder="Task Description" required
+                maxlength="200" [(ngModel)]="task.description" [ngModelOptions]="{standalone: true}">
+        </fieldset>
+
+        <fieldset>
+            <label for="deadline">Deadline</label>
+            <input id="deadline" type="date" class="pure-input-1" placeholder="Deadline" required [(ngModel)]="task.deadline" [ngModelOptions]="{standalone: true}">
+        </fieldset>
+
+        <fieldset class="pure-group">
+            <label for="tags">Tags</label>
+            <input id="tags" type="text" class="pure-input-1" placeholder="Comma seperated tags" maxlength="50" [(ngModel)]="tags" [ngModelOptions]="{standalone: true}">
+        </fieldset>
+
+        <button class="pure-button pure-button-primary" (click)="createTask()">Create Task</button>
+    </form>
+
+</div>
