--- a/src/styles.css
+++ b/src/styles.css
@@ -1,11 +1,15 @@
-@media screen and (min-width: 35.5em) {
-    .container {
-        margin: 0;
-    }
+.container {
+    margin: 2em;
+}
+
+button {
+    border-radius: 5px !important;
+    min-width: 10em;
 }
 
 @media screen and (min-width: 48em) {
     .container {
-        margin: 0 10%;
+        margin-left: 10%;
+        margin-right: 10%;
     }
 }
