Added Task Details functionality
Changes
 * When a task title is clicked, it navigates to this view
 * This view show some additional details to be viewed / modified
   by the developer
 * Also, updated the USECASES.md file

Misc
 * Added a message when the task list is empty
 * Updated background color and font color to resemble GitHub's
   hacker theme
 * Added Google Font to app

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -7,6 +7,7 @@
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <title>Dev Helper</title>
   <link rel="stylesheet" href="https://unpkg.com/purecss@1.0.0/build/pure-min.css">
+  <link href="https://fonts.googleapis.com/css?family=Roboto+Mono" rel="stylesheet">
 </head>
 
 <body>
