--- a/src/styles.css
+++ b/src/styles.css
@@ -1,3 +1,11 @@
+
+
+body {
+    background-color: black;
+    color: #b5e853;
+    font-family: 'Roboto Mono', monospace;
+}
+
 .container {
     margin: 2em;
 }
@@ -5,6 +13,12 @@
 button {
     border-radius: 5px !important;
     min-width: 10em;
+}
+
+button.geek {
+    background-color: #b5e853;
+    color: black;
+    font-weight: bold;
 }
 
 @media screen and (min-width: 48em) {
