--- a/src/styles.css
+++ b/src/styles.css
@@ -10,6 +10,11 @@ body {
     margin: 2em;
 }
 
+.pure-menu-link:hover, .pure-menu-link.active {
+    background-color: #b5e853;
+    color: black;
+}
+
 button {
     border-radius: 5px !important;
     min-width: 10em;
