Added copy to clipboard for paths
Changes:
 * Now you can simply click the clipboard icon
   and voila, it is ready to be pasted.
 * Generated files for Github Pages.

Resolves #7

--- a/src/styles.css
+++ b/src/styles.css
@@ -26,6 +26,10 @@ button.geek {
     font-weight: bold;
 }
 
+input[type] {
+    color: black;
+}
+
 @media screen and (min-width: 48em) {
     .container {
         margin-left: 10%;
