--- a/src/app/components/paths/paths.component.html
+++ b/src/app/components/paths/paths.component.html
@@ -1,5 +1,7 @@
 <div>
-    <header><h1>Add Path</h1></header>
+    <header>
+        <h1>Add Path</h1>
+    </header>
     <form class="pure-form pure-form-stacked">
         <fieldset>
             <label for="description">Path Description</label>
@@ -21,7 +23,14 @@
 <div *ngIf="paths.length > 0; else emptyPathList">
     <div *ngFor="let aPath of paths">
         <h3>{{ aPath.description }}</h3>
-        <strong>Location: </strong>  {{ aPath.location }}
+        <div style="display: flex; align-items: center;">
+            <input #locationBox type="text" class="pure-input-1" [value]="aPath.location" readonly>
+            <svg style="width: 32px; height: 32px;" viewBox="0 0 24 24" (click)="copyToClipboard(locationBox, messageBox)">
+                <path fill="#fff"
+                    d="M19,3A2,2 0 0,1 21,5V19A2,2 0 0,1 19,21H5A2,2 0 0,1 3,19V5A2,2 0 0,1 5,3H9.18C9.6,1.84 10.7,1 12,1C13.3,1 14.4,1.84 14.82,3H19M12,3A1,1 0 0,0 11,4A1,1 0 0,0 12,5A1,1 0 0,0 13,4A1,1 0 0,0 12,3M7,7V5H5V19H19V5H17V7H7M7,13L12,18V15H16V11H12V8L7,13Z" />
+            </svg>
+            <span #messageBox></span>
+        </div>
         <hr />
     </div>
 </div>
