--- a/src/app/components/paths/paths.component.html
+++ b/src/app/components/paths/paths.component.html
@@ -3,19 +3,19 @@
         <h1>Add Path</h1>
     </header>
     <form class="pure-form pure-form-stacked">
-        <fieldset>
+        <fieldset class="form-group">
             <label for="description">Path Description</label>
-            <input id="description" type="text" class="pure-input-1" placeholder="Path Description" required
+            <input id="description" type="text" class="form-control" placeholder="Path Description" required
                 maxlength="50" [(ngModel)]="path.description" [ngModelOptions]="{standalone: true}">
         </fieldset>
 
-        <fieldset class="pure-group">
+        <fieldset class="form-group">
             <label for="location">Path Location</label>
-            <input id="location" type="text" class="pure-input-1" placeholder="Absolute/Relative Path" required
+            <input id="location" type="text" class="form-control" placeholder="Absolute/Relative Path" required
                 maxlength="150" [(ngModel)]="path.location" [ngModelOptions]="{standalone: true}">
         </fieldset>
 
-        <button class="pure-button geek" (click)="savePath()">Save Path</button>
+        <button class="btn btn-primary" (click)="savePath()">Save Path</button>
     </form>
 </div>
 <hr />
