--- a/src/app/components/paths/paths.component.html
+++ b/src/app/components/paths/paths.component.html
@@ -25,9 +25,8 @@
         <h3>{{ aPath.description }}</h3>
         <div style="display: flex; align-items: center;">
             <input #locationBox type="text" class="pure-input-1" [value]="aPath.location" readonly>
-            <svg style="width: 32px; height: 32px;" viewBox="0 0 24 24" (click)="copyToClipboard(locationBox, messageBox)">
-                <path fill="#fff"
-                    d="M19,3A2,2 0 0,1 21,5V19A2,2 0 0,1 19,21H5A2,2 0 0,1 3,19V5A2,2 0 0,1 5,3H9.18C9.6,1.84 10.7,1 12,1C13.3,1 14.4,1.84 14.82,3H19M12,3A1,1 0 0,0 11,4A1,1 0 0,0 12,5A1,1 0 0,0 13,4A1,1 0 0,0 12,3M7,7V5H5V19H19V5H17V7H7M7,13L12,18V15H16V11H12V8L7,13Z" />
+            <svg width="24" height="24" viewBox="0 0 24 24" (click)="copyToClipboard(locationBox, messageBox)">
+                <path d="M7 13h10v1h-10v-1zm15-11v22h-20v-22h3c1.229 0 2.18-1.084 3-2h8c.82.916 1.771 2 3 2h3zm-11 1c0 .552.448 1 1 1s1-.448 1-1-.448-1-1-1-1 .448-1 1zm9 15.135c-1.073 1.355-2.448 2.763-3.824 3.865h3.824v-3.865zm0-14.135h-4l-2 2h-3.898l-2.102-2h-4v18h7.362c4.156 0 2.638-6 2.638-6s6 1.65 6-2.457v-9.543zm-13 12h5v-1h-5v1zm0-4h10v-1h-10v1zm0-2h10v-1h-10v1z"/>
             </svg>
             <span #messageBox></span>
         </div>
